--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "cakephp/cakephp": "5.2.*",
         "cakephp/migrations": "^4.0.0",
         "cakephp/plugin-installer": "^2.0",
+        "friendsofcake/crud": "^7.2",
         "mobiledetect/mobiledetectlib": "^4.8.03"
     },
     "require-dev": {
